fix: resolve root 403 error